# kaaval-assurance

./: .dockerignore  .env.example  .gitignore  BUILD-WEEK.md  Dockerfile  Kaaval-Assurance-Submission-Copy.md  LICENSE  PRIOR_WORK.md  README.md  pitch_slides.html  pitch_slides.md  pyproject.toml
artifacts/: SHA256SUMS-amd-aa8b5b2.txt  amd-pod-preflight.txt  demo-live-manifest.json  demo-live-telemetry.json  demo-live-trajectory.json  fireworks-cost-comparison-20260711T054906Z.json  runtime-probe-pre-serve.json  runtime-probe.json  telemetry-vllm.md  vllm-metrics-eval-16.prom  vllm-metrics-eval-32.prom
docs/: amd-measured-run.md  deck-outline.md  demo-script.md  feature-verification.md  hackathon-ops.md  hosted-demo.md  k-top-openai-hackathon.md  k-top-requirements.md  kaaval-assurance-architecture.html  kaaval-assurance-architecture.md  kaaval-product-roadmap.md  kaaval-research-landscape-2026-07.md  kaaval-top-openai-build-week-brief.md  kaaval-workspace-migration.md  submission-checklist.md  team-workflow.md
scripts/: build_comprehensive_deck.js  build_pitch_deck.js  container_smoke.sh  export_demo_artifacts.sh  fireworks_always_remote_baseline.sh  fireworks_smoke_run.sh  mock_grounding_ewma_demo.sh  run_mock_truth.sh  smoke_vllm.sh  vllm_smoke_run.sh  write_fireworks_comparison.sh
tests/: test_agent.py  test_api_server.py  test_audit.py  test_audit_fireworks.py  test_closed_loop_demo.py  test_compare_runs.py  test_contracts.py  test_demo_console.py  test_double_failure.py  test_eval_dataset.py  test_eval_runner.py  test_fail_closed.py  test_fireworks_provider.py  test_flightdeck_hygiene.py  test_gold_scoring.py  test_grounding_ewma_e2e.py  test_grounding_rules.py  test_live_demo.py  test_metrics.py  test_mock_pipeline.py  test_ops.py  test_ops_api.py  test_provider_switching.py  test_router_online_ewma.py  (+11 more)
(+93 files in other folders)
