[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaaval-assurance"
version = "0.1.0"
description = "Kaaval inference assurance plane: task contracts, deterministic verification, per-category trend tracking, and sampled adversarial audit for AMD + Gemma workloads."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
server = [
    "fastapi",
    "uvicorn",
]
demo = [
    "streamlit>=1.28",
    "fastapi",
    "uvicorn",
]

[project.scripts]
kaaval-eval = "kaaval_assurance.eval.cli:main"
kaaval-agent = "kaaval_assurance.agent_cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx2>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaaval_assurance"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
